[gd_scene load_steps=23 format=3 uid="uid://buc2hq5m81801"]

[ext_resource type="Script" uid="uid://jslqxen8eknj" path="res://player/player.gd" id="1_g1dw6"]
[ext_resource type="Texture2D" uid="uid://dobra11p1wbah" path="res://assets/DarkSamurai3.png" id="1_oul6g"]
[ext_resource type="Resource" uid="uid://burmekvucgnek" path="res://player/jump_data.tres" id="2_g1dw6"]
[ext_resource type="Script" uid="uid://cf0gbmqdprtej" path="res://addons/ftr_tools/sm/state_machine.gd" id="2_rkbax"]
[ext_resource type="Resource" uid="uid://db1bp13h8byw1" path="res://player/player_data.tres" id="3_yw30f"]
[ext_resource type="Script" uid="uid://carcu5t0r8yo0" path="res://player/states/idle_state.gd" id="6_g6k8r"]
[ext_resource type="Script" uid="uid://ps4ws8p4buyr" path="res://player/states/falling_state.gd" id="7_boad6"]
[ext_resource type="Script" uid="uid://bvwt4t55rvrwk" path="res://player/states/jumping_state.gd" id="8_rgyib"]
[ext_resource type="Script" uid="uid://dd87ct57h2bn0" path="res://player/states/moving_state.gd" id="9_hg6s5"]
[ext_resource type="Script" uid="uid://bnq0hnhjidrxa" path="res://player/states/belting_state.gd" id="10_8t03j"]
[ext_resource type="Script" uid="uid://d38vhllxhfv3n" path="res://player/hurt_area.gd" id="11_2ieo8"]
[ext_resource type="Script" uid="uid://c6vb0djjxxyvr" path="res://player/interactable_detector.gd" id="12_ebec5"]
[ext_resource type="Script" uid="uid://cmo4wqq4g7htn" path="res://player/interactable_manager.gd" id="13_yllr7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oul6g"]

[sub_resource type="Animation" id="Animation_hg6s5"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}

[sub_resource type="Animation" id="Animation_8t03j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_2ieo8"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="Animation" id="Animation_ebec5"]
resource_name = "jump"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_yllr7"]
resource_name = "fall"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yllr7"]
_data = {
&"RESET": SubResource("Animation_8t03j"),
&"fall": SubResource("Animation_yllr7"),
&"idle": SubResource("Animation_hg6s5"),
&"jump": SubResource("Animation_ebec5"),
&"run": SubResource("Animation_2ieo8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8t03j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2ieo8"]
radius = 18.9737

[node name="Player" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_g1dw6")
jump_data = ExtResource("2_g1dw6")
player_data = ExtResource("3_yw30f")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_oul6g")
flip_h = true
hframes = 14
vframes = 8
frame = 1
region_rect = Rect2(0, 0, 64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_oul6g")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_rkbax")
initial_state = NodePath("IdleState")
metadata/_custom_type_script = "uid://cf0gbmqdprtej"

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("6_g6k8r")

[node name="FallingState" type="Node" parent="StateMachine"]
script = ExtResource("7_boad6")

[node name="JumpingState" type="Node" parent="StateMachine"]
script = ExtResource("8_rgyib")

[node name="MovingState" type="Node" parent="StateMachine"]
script = ExtResource("9_hg6s5")

[node name="BeltingState" type="Node" parent="StateMachine"]
script = ExtResource("10_8t03j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yllr7")
}

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("11_2ieo8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("CapsuleShape2D_8t03j")
debug_color = Color(0.98384, 0, 0.349269, 0.42)

[node name="InteractableDetector" type="Area2D" parent="."]
script = ExtResource("12_ebec5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableDetector"]
shape = SubResource("CircleShape2D_2ieo8")

[node name="InteractableManager" type="Node" parent="."]
script = ExtResource("13_yllr7")

[connection signal="body_entered" from="HurtArea" to="HurtArea" method="_on_body_entered"]
[connection signal="damage_taken" from="HurtArea" to="." method="_on_hurt_area_damage_taken"]
[connection signal="area_entered" from="InteractableDetector" to="InteractableDetector" method="_on_area_entered"]
[connection signal="area_exited" from="InteractableDetector" to="InteractableDetector" method="_on_area_exited"]
[connection signal="interactable_found" from="InteractableDetector" to="InteractableManager" method="_on_interactable_detector_interactable_found"]
[connection signal="interactable_lost" from="InteractableDetector" to="InteractableManager" method="_on_interactable_detector_interactable_lost"]
